exam01/3-1-ft_range.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r9p36.42.us.org
Darwin 17.4.0 x86_64
$> date
Fri Jan 17 21:59:18 PST 2020
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2020/piscine-c-exam01/exam_20200118/tri

= Git history ==================================================================
$> git -C /var/folders/dv/kfft9jpx4sn9kw3jr4mcv1jh0000gp/T/tmpvfRLLQ/user log --pretty='%H - %an, %ad : %s'
1d6e1862a5f0d33537c83eb012db6b187337534c - Exam 42, Fri Jan 17 21:58:57 2020 -0800 : ex
0d4af00630b1653987ad8f62e435cc6e5658d644 - Exam 42, Fri Jan 17 21:57:03 2020 -0800 : ex
3d2887f77a387ced656a8f0d5d29b4ad80e66b5b - Exam 42, Fri Jan 17 20:02:30 2020 -0800 : ex3-0
250e5029bff85e5ad6b1f78975a6f0c3270f5433 - Exam 42, Fri Jan 17 19:51:05 2020 -0800 : 3-0
8ac8a924ef44897dad80b689de930ed8cea1b972 - Exam 42, Fri Jan 17 19:33:09 2020 -0800 : 2-0
f2e4cb39942f671374b2508937dae29e3e2d88c1 - Exam 42, Fri Jan 17 18:42:07 2020 -0800 : 1-0
8e346f2f6d5d1ae293809299551928437f399272 - Exam 42, Fri Jan 17 18:13:27 2020 -0800 : 0-0
 
= Collected files ==========================================
$> ls -lAR /var/folders/dv/kfft9jpx4sn9kw3jr4mcv1jh0000gp/T/tmpvfRLLQ/user
total 8
-rw-r--r--  1 deepthought  deepthought  1649 Jan 17 21:59 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Jan 17 21:59 alpha_mirror
drwxr-xr-x  3 deepthought  deepthought   102 Jan 17 21:59 ft_atoi_base
drwxr-xr-x  3 deepthought  deepthought   102 Jan 17 21:59 ft_range
drwxr-xr-x  3 deepthought  deepthought   102 Jan 17 21:59 maff_revalpha
drwxr-xr-x  3 deepthought  deepthought   102 Jan 17 21:59 rev_print

/var/folders/dv/kfft9jpx4sn9kw3jr4mcv1jh0000gp/T/tmpvfRLLQ/user/alpha_mirror:
total 8
-rw-r--r--  1 deepthought  deepthought  1549 Jan 17 21:59 alpha_mirror.c

/var/folders/dv/kfft9jpx4sn9kw3jr4mcv1jh0000gp/T/tmpvfRLLQ/user/ft_atoi_base:
total 8
-rw-r--r--  1 deepthought  deepthought  1160 Jan 17 21:59 ft_atoi_base.c

/var/folders/dv/kfft9jpx4sn9kw3jr4mcv1jh0000gp/T/tmpvfRLLQ/user/ft_range:
total 8
-rw-r--r--  1 deepthought  deepthought  1702 Jan 17 21:59 ft_range.c

/var/folders/dv/kfft9jpx4sn9kw3jr4mcv1jh0000gp/T/tmpvfRLLQ/user/maff_revalpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1010 Jan 17 21:59 maff_revalpha.c

/var/folders/dv/kfft9jpx4sn9kw3jr4mcv1jh0000gp/T/tmpvfRLLQ/user/rev_print:
total 8
-rw-r--r--  1 deepthought  deepthought  1211 Jan 17 21:59 rev_print.c
 
= ft_range =====================================================================
$> gcc -Wextra -Wall -Werror main.c ft_range.c -o user_exe 
ft_range.c:39:16: error: implicitly declaring library function 'malloc' with type 'void *(unsigned long)' [-Werror,-Wimplicit-function-declaration]
        range = (int*)malloc((sizeof(int) * (mem_end - mem_start + 4)));
                      ^
ft_range.c:39:16: note: include the header <stdlib.h> or explicitly provide a declaration for 'malloc'
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
